--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -4,7 +4,9 @@
 }
 
 .wproject {
-    font-size: 8px;
-    border: 1px solid gray;
-    background: #a7a7a7;
+    font-size: 10px;
+    border: 1px groove;
+    background: #d0d0d0;
+    margin: 2px;
+    float: left;
 }
