--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -4,9 +4,11 @@
 }
 
 .wproject {
-    font-size: 10px;
+    font-size: 12px;
     border: 1px groove;
     background: #d0d0d0;
-    margin: 2px;
+    margin: 3px;
+    padding: 4px;
     float: left;
+    border-radius: 30%;
 }
