--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -12,3 +12,21 @@
     float: left;
     border-radius: 10px;
 }
+
+.btn-success {
+    background: white;
+    -webkit-transition: background linear 350ms;
+    color: #5cb85c;
+}
+
+.btn-warning {
+    background: white;
+    -webkit-transition: background linear 350ms;
+    color: #ec971f;
+}
+
+.btn-danger {
+    background: white;
+    -webkit-transition: background linear 350ms;
+    color: #d9534f;
+}
