More design changes;Add editor info;Add flash message

--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -110,3 +110,8 @@
     display: inline-block;
     border: 1px solid black;
 }
+
+/* Some margin for our flash message */
+.alert-success {
+    margin: 20px;
+}
