--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
     <title>CopyPatrol</title>
     {% block stylesheets %}
-        <link href="{{ siteUrl('../css/index.css') }}" type="text/css" rel="stylesheet"/>
         <link href="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css"
               rel="stylesheet">
+        <link href="{{ currentUrl('../css/index.css') }}" type="text/css" rel="stylesheet"/>
     {% endblock %}
     {% block scripts %}
         <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/jquery/1.12.0/jquery.min.js"
@@ -21,9 +21,11 @@
     {% endblock %}
 </head>
 <body>
-<div id="header">
-    <h1>Plagiabot</h1>
-    <div class="btn-primary" onclick="loginRequest()">Login here!</div>
+<div id="body">
+    <div id="top-banner">
+        <h1>CopyPatrol</h1>
+        {#<div id="login-btn" class="btn btn-xs btn-default" onclick="">Login here!</div>#}
+    </div>
     {% block banners %}
         <div class="alert alert-success">
             <strong>Hello!</strong> This is a web-version of Plagiabot. Database writes for this tool are disabled at
@@ -34,11 +36,11 @@
         </div>
     {% endblock %}
     <div class="header-div container-fluid">
-        <div class="header-col col-md-3 text-center">Page</div>
-        <div class="header-col col-md-1 text-center">Diff</div>
-        <div class="header-col col-md-2 text-center">Editor</div>
-        <div class="header-col col-md-3 text-center">Wikiprojects</div>
-        <div class="header-col col-md-2 text-center">Review</div>
+        <div class="header-col col-sm-3 text-center">Page</div>
+        <div class="header-col col-sm-1 text-center">Diff</div>
+        <div class="header-col col-sm-2 text-center">Editor</div>
+        <div class="header-col col-sm-3 text-center">Wikiprojects</div>
+        <div class="header-col col-sm-2 text-center">Review</div>
     </div>
     <div class="record-container">
         {% block records %}
