--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="row-div col-sm-2 text-center report-div">
                     {% if row.editor %}
-                        <a href='{{ row.editor }}'
+                        <a href='{{ row.editor_page }}'
                            class={{ row.editor_page_dead ? 'text-danger' : '' }}>{{ row.editor }}</a><br>
                         <small>
                             <span><a href='{{ row.editor_talk }}'
