--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -13,6 +13,7 @@
                 type="text/javascript"></script>
         <script src="//tools-static.wmflabs.org/cdnjs/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"
                 type="text/javascript"></script>
+        <script src="{{ siteUrl('js/index.js') }}" type="text/javascript"></script>
         <script type="text/javascript">
             $( document ).ready( function () {
                 $( '[data-toggle="tooltip"]' ).tooltip();
