Changes based on Ryan's feedback

--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -82,7 +82,7 @@
                             <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                             Compare
                         </button>
-                        <a href="#">{{ copy }}</a><br/>
+                        <a href="{{ copy }}" target="_blank">{{ copy }}</a><br/>
                         <div class="compare-div" id="{{ 'comp' }}">
                             <div class="compare-edit compare-pane">
                                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
