--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -38,6 +38,7 @@
     </div>
     {% block banners %}
         <div class="alert alert-success alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
             <strong>Hello!</strong> This is a web-version of Plagiabot. Database writes for this tool are disabled at
             the moment. Feel free to play around and log your complaints, feature requests and appreciations
             <a href="https://en.wikipedia.org/wiki/User_talk:EranBot/Copyright/rc">here</a>.
