--- a/public_html/templates/index.html
+++ b/public_html/templates/index.html
@@ -1,100 +1,116 @@
 {% extends "base.html" %}
+{% import _self as macros %}
+
+{% macro reviewer_node( row ) %}
+    <div class="status-div-reviewer{{ row.reviewed ? '': ' none' }} status-div-reviewer-{{ row.ithenticate_id }}">
+        Reviewed by
+        <span>
+            <a class="reviewer-link" href="{{ row.reviewed_by_url }}" target="_blank">{{ row.status_user }}</a>
+        </span>
+        <div class="reviewer-timestamp">
+            {{ row.review_timestamp }}
+        </div>
+    </div>
+{% endmacro %}
 
 {% block records %}
     {% if records is not empty %}
         {% for row in records %}
-            <div class="row-container container-fluid">
-                <div class="row-div col-sm-3 page-div">
-                    <b><a href='{{ row.page_link }}' target="_blank"
-                          class={{ row.page_dead ? 'text-danger' : '' }}>{{ row.page_title }}</a></b>
-                </div>
-                <div class="row-div col-sm-1 text-center diff-div">
-                    <a href='{{ row.diff }}' target="_blank">Diff</a><br>
-                    <small>
-                        <span>{{ row.diff_timestamp }}</span>
-                    </small>
-                </div>
-                <div class="row-div col-sm-2 text-center report-div">
-                    {% if row.editor %}
-                        <a href='{{ row.editor }}'
-                           class={{ row.editor_page_dead ? 'text-danger' : '' }}>{{ row.editor }}</a><br>
-                        <small>
-                            <span><a href='{{ row.editor_talk }}'
-                                     class='{{ row.editor_talk_dead ? 'text-danger' : '' }}'
-                                     target="_blank">Talk </a>| </span>
-                            <span><a href='{{ row.editor_contribs }}' target="_blank">Contributions</a> </span><br>
-                            <span>Edit count: {{ row.editcount }}</span>
+            <div class="row-container">
+                <div class="container-fluid">
+                    <div class="row-div col-sm-3 page-div">
+                        <b><a href='{{ row.page_link }}' target="_blank"
+                              class={{ row.page_dead ? 'text-danger' : '' }}>{{ row.page_title }}</a></b>
+                    </div>
+                    <div class="row-div col-sm-1 text-center diff-div">
+                        <a href='{{ row.diff }}' target="_blank">Diff</a><br>
+                        <small class="diff-div-timestamp">
+                            <span>{{ row.diff_timestamp }}</span>
                         </small>
-                    {% else %}
-                        <span class=" glyphicon glyphicon-exclamation-sign"></span>
-                        <div class="text-muted" data-toggle="tooltip" data-placement="bottom"
-                             title="This usually means that the editor was anonymous. It may also mean that the data is not available in Labs database yet.">
-                            Editor not found
-                        </div>
-                    {% endif %}
+                    </div>
+                    <div class="row-div col-sm-2 text-center report-div">
+                        {% if row.editor %}
+                            <a href='{{ row.editor }}'
+                               class={{ row.editor_page_dead ? 'text-danger' : '' }}>{{ row.editor }}</a><br>
+                            <small>
+                                <span><a href='{{ row.editor_talk }}'
+                                         class='{{ row.editor_talk_dead ? 'text-danger' : '' }}'
+                                         target="_blank">Talk</a> | </span>
+                                <span><a href='{{ row.editor_contribs }}' target="_blank">Contributions</a> </span><br>
+                                <span>Edit count: {{ row.editcount }}</span>
+                            </small>
+                        {% else %}
+                            <span class=" glyphicon glyphicon-exclamation-sign"></span>
+                            <div class="text-muted" data-toggle="tooltip" data-placement="bottom"
+                                 title="This usually means that the editor was anonymous. It may also mean that the data is not available in Labs database yet.">
+                                Editor not found
+                            </div>
+                        {% endif %}
+                    </div>
+                    <div class="row-div col-sm-3 text-center wikiproject-div">
+                        {% if row.wikiprojects is not empty %}
+                            {% for wp in row.wikiprojects %}
+                                <span class="row-div wproject">{{ wp }}</span>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                    <div class="row-div col-sm-2 text-center status-div">
+                        {% if row.status == 'fixed' %}
+                            <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
+                                   class="btn btn-success-clicked btn-block"
+                                   title="The edit was a copyright violation and has been reverted" value="Page fixed"
+                                   onclick="saveState({{ row.ithenticate_id }}, 'fixed')">
+                            <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
+                                   class="btn btn-secondary btn-block"
+                                   title="The edit is a false positive, nothing needs to be done" value="No action needed"
+                                   disabled>
+                        {% elseif row.status == 'false' %}
+                            <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
+                                   class="btn btn-success btn-block"
+                                   title="The edit was a copyright violation and has been reverted" value="Page fixed"
+                                   disabled>
+                            <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
+                                   class="btn btn-danger-clicked btn-block"
+                                   title="The edit is a false positive, nothing needs to be done" value="No action needed"
+                                   onclick="saveState({{ row.ithenticate_id }}, 'false')">
+                        {% elseif row.status == NULL %}
+                            <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
+                                   class="btn btn-success btn-outline btn-block"
+                                   title="The edit was a copyright violation and has been reverted" value="Page fixed"
+                                   onclick="saveState({{ row.ithenticate_id }}, 'fixed')">
+                            <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
+                                   class="btn btn-danger btn-block"
+                                   title="The edit is a false positive, nothing needs to be done" value="No action needed"
+                                   onclick="saveState({{ row.ithenticate_id }}, 'false')">
+                        {% endif %}
+                        {{ macros.reviewer_node( row ) }}
+                    </div>
                 </div>
-                <div class="row-div col-sm-3 text-center wikiproject-div">
-                    {% if row.wikiprojects is not empty %}
-                        {% for wp in row.wikiprojects %}
-                            <span class="row-div wproject">{{ wp }}</span>
+                <div class="compare-links-container">
+                    <a class="btn btn-xs btn-primary compare-button" href='{{ r }}' target="_blank">
+                        <span class="glyphicon glyphicon-new-window"></span>
+                        Turnitin report
+                    </a><br>
+                    {% if row.copyvios is not empty %}
+                        {% for copy in row.copyvios %}
+                            <button class="btn btn-xs btn-primary dropdown-toggle compare-button" onclick="">
+                                <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
+                                Compare
+                            </button>
+                            <a href="{{ copy }}" target="_blank">{{ copy }}</a><br/>
+                            <div class="compare-div" id="{{ 'comp' }}">
+                                <div class="compare-edit compare-pane">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                    dolor.
+                                </div>
+                                <div class="compare-website compare-pane">
+                                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
+                                    dolor.
+                                </div>
+                            </div>
                         {% endfor %}
                     {% endif %}
                 </div>
-                <div class="row-div col-sm-2 text-center status-div">
-                    {% if row.status == 'fixed' %}
-                        <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
-                               class="btn btn-success-clicked btn-block"
-                               title="The edit was a copyright violation and has been reverted" value="Page fixed"
-                               onclick="saveState({{ row.ithenticate_id }}, 'fixed')">
-                        <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
-                               class="btn btn-secondary btn-block"
-                               title="The edit is a false positive, nothing needs to be done" value="No action needed"
-                               disabled>
-                    {% elseif row.status == 'false' %}
-                        <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
-                               class="btn btn-success btn-block"
-                               title="The edit was a copyright violation and has been reverted" value="Page fixed"
-                               disabled>
-                        <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
-                               class="btn btn-danger-clicked btn-block"
-                               title="The edit is a false positive, nothing needs to be done" value="No action needed"
-                               onclick="saveState({{ row.ithenticate_id }}, 'false')">
-                    {% elseif row.status == NULL %}
-                        <input type="button" id="{{ 'success' ~ row.ithenticate_id }}"
-                               class="btn btn-success btn-outline btn-block"
-                               title="The edit was a copyright violation and has been reverted" value="Page fixed"
-                               onclick="saveState({{ row.ithenticate_id }}, 'fixed')">
-                        <input type="button" id="{{ 'danger' ~ row.ithenticate_id }}"
-                               class="btn btn-danger btn-block"
-                               title="The edit is a false positive, nothing needs to be done" value="No action needed"
-                               onclick="saveState({{ row.ithenticate_id }}, 'false')">
-                    {% endif %}
-                </div>
-            </div>
-            <div class="compare-links-container">
-                <a class="btn btn-xs btn-primary compare-button" href='{{ r }}' target="_blank">
-                    <span class="glyphicon glyphicon-new-window"></span>
-                    Turnitin report
-                </a><br>
-                {% if row.copyvios is not empty %}
-                    {% for copy in row.copyvios %}
-                        <button class="btn btn-xs btn-primary dropdown-toggle compare-button" onclick="">
-                            <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
-                            Compare
-                        </button>
-                        <a href="{{ copy }}" target="_blank">{{ copy }}</a><br/>
-                        <div class="compare-div" id="{{ 'comp' }}">
-                            <div class="compare-edit compare-pane">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                                dolor.
-                            </div>
-                            <div class="compare-website compare-pane">
-                                Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget
-                                dolor.
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endif %}
             </div>
         {% endfor %}
     {% endif %}
