Review only if user is logged in

--- a/public_html/templates/base.html
+++ b/public_html/templates/base.html
@@ -72,13 +72,15 @@
             {% endif %}
         {% endblock flashes %}
     {% endblock %}
-    <div class="header-div container-fluid">
-        <div class="header-col col-sm-3 text-center">Page</div>
-        <div class="header-col col-sm-1 text-center">Diff</div>
-        <div class="header-col col-sm-2 text-center">Editor</div>
-        <div class="header-col col-sm-3 text-center">Wikiprojects</div>
-        <div class="header-col col-sm-2 text-center">Review</div>
-    </div>
+    {% block rowheader %}
+        <div class="header-div container-fluid">
+            <div class="header-col col-sm-3 text-center">Page</div>
+            <div class="header-col col-sm-1 text-center">Diff</div>
+            <div class="header-col col-sm-2 text-center">Editor</div>
+            <div class="header-col col-sm-3 text-center">Wikiprojects</div>
+            <div class="header-col col-sm-2 text-center">Review</div>
+        </div>
+    {% endblock %}
     <div class="record-container">
         {% block records %}
         {% endblock %}
