--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -84,17 +84,6 @@
     /*border: 1px solid yellowgreen;*/
 }
 
-.compare-div {
-    width: 100%;
-    height: 120px;
-    display: none;
-    margin: auto;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    text-align: center;
-    /*border: 1px solid red;*/
-}
-
 .compare-button {
     margin-left: 30px;
     margin-right: 20px;
@@ -106,13 +95,26 @@
 }
 
 .compare-pane {
-    width: 47%;
-    margin: 2px 1%;
-    float: left;
-    overflow-y: auto;
-    height: 120px;
+    width: 95%;
+    margin: 2px auto;
+    height: 160px;
+    border: 1px solid dimgrey;
+    text-align: justify;
+    display: none;
+    justify-content: space-between;
+}
+
+.compare-pane-left, .compare-pane-right {
+    width: 49.8%;
     display: inline-block;
-    /*border: 1px solid black;*/
+    margin: 0 auto;
+    height: inherit;
+    padding: 8px;
+    overflow: scroll;
+}
+
+.compare-pane-right {
+    border-left: 1px dashed dimgrey;
 }
 
 .diff-div {
